# orbit

./: CMakeLists.txt
comparison/: di.ipynb  test.ipynb
contrib/jupyter/: orbit_example_notebook.ipynb
src/CallstackPeriodCalibrator/: CMakeLists.txt  CallstackPeriodCalibrator.cpp
src/Mizar/: CMakeLists.txt  Mizar.cpp
src/MizarBase/include/MizarBase/: BaselineOrComparison.h
src/MizarData/: ActiveFunctionTimePerFrameComparatorTest.cpp  BaselineAndComparison.cpp  BaselineAndComparisonHelper.h  BaselineAndComparisonTest.cpp  CMakeLists.txt  DummyFunctionSymbolToKey.h  MizarDataWithSampledFunctionIdTest.cpp  MizarPairedDataTest.cpp
src/MizarData/include/MizarData/: ActiveFunctionTimePerFrameComparator.h  BaselineAndComparison.h  BaselineOrComparison.h  FrameTrack.h  MizarData.h  MizarDataProvider.h  MizarPairedData.h  SamplingWithFrameTrackComparisonReport.h
src/MizarModels/include/MizarModels/: SamplingWithFrameTrackReportModel.h
src/MizarWidgets/: SamplingWithFrameTrackInputWidget.cpp  SamplingWithFrameTrackInputWidget.ui  SamplingWithFrameTrackInputWidgetTest.cpp  SamplingWithFrameTrackReportConfigValidatorTest.cpp  SamplingWithFrameTrackWidget.cpp  SamplingWithFrameTrackWidgetTest.cpp
src/MizarWidgets/include/MizarWidgets/: SamplingWithFrameTrackInputWidget.h  SamplingWithFrameTrackWidget.h
src/Statistics/: MultiplicityCorrectionTest.cpp  StatisticsUtilTest.cpp
src/Statistics/include/Statistics/: MultiplicityCorrection.h  StatisticsUtils.h
src/VTableOrder/: CMakeLists.txt  main.cpp
src/Waiter/: CMakeLists.txt  Waiter.cpp
